--- a/widget/script/app.json
+++ b/widget/script/app.json
@@ -6,27 +6,28 @@
     "historyGestureEnabled": false,
     "tabBar": {
         "height":62,
+        "background": "widget://image/main/tabbar_bg.png",
         "animated": false,
         "scrollEnabled":false,
-        "index":3,
+        "index":2,
         "selectedColor":"#ffffff", 
         "fontSize": 11,
         "textOffset":8,
         "list": [
             {
-                "text": "喵",
+                "text": "猫咪图鉴",
                 "iconPath": "widget://image/main/main.png",
                 "selectedIconPath": "widget://image/main/main.png"
             }, {
-                "text": "喵",
+                "text": "异喵趣闻",
                 "iconPath": "widget://image/main/main.png",
                 "selectedIconPath": "widget://image/main/main.png"
             }, {
-                "text": "喵",
+                "text": "晒喵广场",
                 "iconPath": "widget://image/main/main.png",
                 "selectedIconPath": "widget://image/main/main.png"
             }, {
-                "text": "喵",
+                "text": "个人中心",
                 "iconPath": "widget://image/main/main.png",
                 "selectedIconPath": "widget://image/main/main.png"
             }
@@ -35,12 +36,12 @@
             {
                 "title": "喵",
                 "name": "tab_frm_main",
-                "url": "widget://html/recommend.html",
+                "url": "widget://html/pic.html",
                 "historyGestureEnabled":false
             }, {
                 "title": "喵",
                 "name": "tab_frm_work",
-                "url": "widget://html/pic.html",
+                "url": "widget://html/recommend.html",
                 "historyGestureEnabled":false
             }, {
                 "title": "喵",
